Sistemazione spazi e indentazioni, rimozione warning
dai ragazzi non ce la facevo più a guardarli, si vede che mi annoiavo?